--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #date time format
-spring.mvc.format.date=yyyy-MM-dd
-spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.date=dd-MM-yyyy
+spring.mvc.format.date-time=dd-MM-yyyy HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
